[gd_scene load_steps=3 format=3 uid="uid://hud"]

[ext_resource type="Script" uid="uid://bn20urfd627io" path="res://scenes/ui/HUD.gd" id="1"]
[ext_resource type="Script" uid="uid://dvpyd1ult40bc" path="res://scenes/ui/TouchInput.gd" id="4"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1")

[node name="Root" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TopBar" type="HBoxContainer" parent="Root"]
layout_mode = 2
offset_left = 16.0
offset_top = 16.0
offset_right = 360.0
offset_bottom = 56.0
theme_override_constants/separation = 16

[node name="WaveLabel" type="Label" parent="Root/TopBar"]
unique_name_in_owner = true
layout_mode = 2
text = "Wave 1"

[node name="TimerLabel" type="Label" parent="Root/TopBar"]
unique_name_in_owner = true
layout_mode = 2
text = "00:00"

[node name="HealthBar" type="ProgressBar" parent="Root"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 16.0
offset_top = 64.0
offset_right = 316.0
offset_bottom = 96.0
value = 100.0

[node name="HealthText" type="Label" parent="Root/HealthBar"]
unique_name_in_owner = true
layout_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 4.0
offset_right = -8.0
offset_bottom = -4.0
text = "HP: 100 / 100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TouchInput" type="Control" parent="Root"]
layout_mode = 1
anchor_top = 0.33
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("4")
